CSS/styles.css
html, body{
    margin: 0;
    width: 100%;
    height: 100%;
    background-color: #000000;
    padding-top: .5%;
}

#pageWrapperColumn{
    display: flex;
    flex-direction: column;
    margin: auto;
    width: 850px;
    height: auto;
    background-color: #9B1D3B;
    border-radius: 10px;
}

.tab {
    display: flex;
    height: 10%;
    width: 100%;
    /*background-color: #000000;*/
    color: #f0f0f0;
    border: 5px #9B1D3B;
    cursor: pointer;
}

.tab button {
    cursor: pointer;
    transition: 0.3s;
}

.tab button:hover {
    background-color: #d0c0c0;
}

.tab button.active {
    background-color: #c0b0b0;
}

.tablinks{
    width: 25%;
    text-align: center;
    box-sizing: border-box;
    border: 5px solid #9B1D3B;
    border-radius: 10px;
}

.tabcontent {
    display: none;
    width: 100%;
}

.mainInfo{
    width: 100%;
    margin: .5%;
    padding-left: 2%;
    padding-right: 2%;
    padding-bottom: 5px;
    background-color: #f0f0f0;
    border-radius: 10px;
}

#pesari{
    float:right;
    width:35%;
    border: 5px solid #000000;
    border-radius: 10px;
}

.pics{
    width: 95%;
    border: 5px solid #000000;
}

#pehmot {
    text-align: center;
}
#pehmot img {
    max-width: 50%;
    border-radius: 10px;
    border: 5px solid #000000;
}

#skillsSection{
    display: flex;
    flex-wrap: wrap;
}

.skillBox{
    margin: 2%;
    padding-left: 2%;
    padding-right: 5%;
    border: 5px solid #9B1D3B;
    border-radius: 10px;
}

.extraSide{
    display: none;
    width: 19%;
    height: 100%;
    color: #ffffff;
    padding-left: .2%;
}

 /* Style the button that is used to open and close the collapsible content */
.collapsible {
    background-color: #ddd;
    color: #444;
    cursor: pointer;
    padding: 16px;
    width: 100%;
    border: 2px solid #f0f0f0;
    text-align: left;
    outline: none;
    font-size: 20px;
    font-weight: bold;
}
  
  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
.active, .collapsible:hover {
    background-color: #ccc;
}
  
  /* Style the collapsible content. Note: hidden by default */
.collapsecontent {
    padding: 0 18px;
    display: none;
    overflow: hidden;
    background-color: #f1f1f1;
}

.role-badge {
    background-color: #9B1D3B;
    color: #fff;
    padding: 2px 8px;
    margin-left: 10px;
    border-radius: 12px;
    font-size: 0.8em;
}

.artpics{
    width: 96%;
    /*margin: 2%;*/
    padding-left: 2%;
    padding-right: 2%;
}

@media only screen and (min-width: 400px) and (max-width: 750px) {
    #pageWrapperColumn{
        width: 100%;
    }

    .tablinks{
        width: 33.3%;
    }

    .mainInfo{
        width: 100%;
    }
    
    .extraSide{
        display: none;
        width: 0%;
    }
}

@media only screen and (min-width: 751px) and (max-width: 850px) {
    #pageWrapperColumn{
        width: 100%;
    }
}

